--- a/texworks.html
+++ b/texworks.html
@@ -362,13 +362,33 @@ export PATH</code></pre>
 引数 : $basename</code></pre>
 
 <p>(実行後，PDFを表示するのチェックを外す．理由は，日本語が反映されないためです．どなたかわかる方は教えて下さい．)</p></li>
-<li><p>これで完了です．</p>
+<li><p>これで完了です．</p></li>
+</ul>
 
-<h2 id="toc_4">連絡</h2>
+<h2 id="toc_4">mktexlsrがない!!</h2>
+
+<p>環境によっては、mktexlsrというコマンド名でなく、texhashという名前になっていることがあります<a href="www.biwako.shiga-u.ac.jp/sensei/kumazawa/aboutsty.html">[引用]</a>．</p>
+
+<h3 id="toc_5">slashboxを追加したい場合</h3>
+
+<p><code>/usr/local/texlive/texmf-local/tex/latex/</code>に適当にディレクトリ<code>sty/</code>を作って<a href="ftp://ftp.kddilabs.jp/CTAN/macros/latex/contrib/slashbox/slashbox.sty"><code>slashbox.sty</code></a>を保存する．そして，</p>
+
+<pre><code class="language-none"> $ sudo texhash /usr/local/texlive/texmf-local/tex/latex/sty/
+texhash: Updating /usr/local/texlive/texmf-local/tex/latex/sty//ls-R... 
+texhash: Done.
+$ sudo texhash
+texhash: Updating /usr/local/texlive/2015/texmf-config/ls-R... 
+texhash: Updating /usr/local/texlive/2015/texmf-dist/ls-R... 
+texhash: Updating /usr/local/texlive/2015/texmf-var/ls-R... 
+texhash: Updating /usr/local/texlive/texmf-local/ls-R... 
+texhash: Done.</code></pre>
+
+<p>できなければ，styファイルとタイプセットとを同じディレクトリに保存してからタイプセットすればいい．</p>
+
+<h2 id="toc_6">連絡</h2>
 
 <p>Merci03(sheltie03)<br>
-umanomimin42 at yahoo.co.jp</p></li>
-</ul>
+ umanomimin42 at yahoo.co.jp</p>
 
 <script type="text/x-mathjax-config">
 if (typeof MathJaxListener !== 'undefined') {
